deployment.yml
---
kind: Service
apiVersion: v1
metadata:
  name: antarcticmap
  labels:
    run: antarcticmap
spec:
  selector:
    app: antarcticmap
  type: NodePort
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30053
      name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antarcticmap
  labels:
    app: antarcticmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antarcticmap
  template:
    metadata:
      labels:
        app: antarcticmap
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: antarcticmap
          image: registry.gitlab.com/freeyeti/antarctic-map
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: gis-data
              mountPath: /data
            - name: www-data
              mountPath: /www_data
      volumes:
        - name: gis-data
          hostPath:
            path: __ANTARCTIC_MAP_GIS_DATA__
        - name: www-data
          hostPath:
            path: __ANTARCTIC_MAP_WWW_DATA__
